<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".RegisterPage">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_page_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_field_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/ddl_year"
                android:text="@string/register_lbl_year" />

            <Spinner
                android:id="@+id/ddl_year"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/ddl_month"
                android:text="@string/register_lbl_month" />

            <Spinner
                android:id="@+id/ddl_month"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/ddl_day"
                android:text="@string/register_lbl_day" />

            <Spinner
                android:id="@+id/ddl_day"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/title_field"
            android:text="@string/register_lbl_item" />

        <EditText
            android:id="@+id/title_field"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/ddl_category"
            android:text="@string/register_lbl_cat" />

        <Spinner
            android:id="@+id/ddl_category"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="50dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register_radio_in" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register_radio_out" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/amount_field"
            android:text="@string/register_lbl_amount" />

        <EditText
            android:id="@+id/amount_field"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <LinearLayout
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.microsoft.fluentui.widget.Button
                style="@style/Widget.FluentUI.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/register_btn_reg" />

            <com.microsoft.fluentui.widget.Button
                style="@style/Widget.FluentUI.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/register_btn_ccl" />
        </LinearLayout>
    </LinearLayout>
</layout>