<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="jp.ac.hal.tokyo.kadai01_is14a_95049.ui.HomePageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/home_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_page_title"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/register_image_button"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@null"
            android:contentDescription="@string/btn_desc_register"
            android:onClick="@{vm::navigateToRegisterPage}"
            android:scaleType="fitCenter"
            android:src="@drawable/illus_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/detail_image_button"
            app:layout_constraintTop_toBottomOf="@id/home_title" />

        <ImageButton
            android:id="@+id/detail_image_button"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@null"
            android:contentDescription="@string/btn_desc_detail"
            android:onClick="@{vm::navigateToDetailPage}"
            android:scaleType="fitCenter"
            android:src="@drawable/illus_detail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/register_image_button"
            app:layout_constraintTop_toBottomOf="@id/home_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>